# ModuleMirror

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ADR.md  ALGORITHM.md  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPETITOR_RESEARCH.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  GOVERNANCE.md  HOWTO.md  LICENSE  PERFORMANCE.md  PERFORMANCE_BENCHMARKS.md  README.md  SECURITY.md  TASK_LIST.md  TROUBLESHOOTING.md  TUTORIAL.md  action.yml  benchmark.py  config.example.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: 01-polish-开源调研报告.md  02-polish-打磨报告-v1.0.md
examples/: README.md
examples/java-medium/src/: DataService.java
examples/js-frontend/src/: service.js
examples/python-small/src/: handler.py  processor.py
gh_similarity_detector/: __init__.py  __main__.py
gh_similarity_detector/api/: app.py
gh_similarity_detector/api/routes/: __init__.py  analysis.py  auth.py  db.py  detect.py  history.py  lineage.py  reports.py  rules.py  semantic_diff.py  system.py  tasks.py  webhook.py  ws.py
gh_similarity_detector/api/static/: dashboard.html
gh_similarity_detector/api/static/css/: app.css  variables.css
gh_similarity_detector/api/static/js/: components.js
gh_similarity_detector/cli/: db_commands.py  error_handler.py  formatters.py  main.py  tui_app.py  validators.py
gh_similarity_detector/config/: __init__.py  config.py  hot_reload.py
gh_similarity_detector/core/: __init__.py  delta_detector.py  di_container.py  events.py  interfaces.py  lineage.py  quality_gate.py  result_sink.py
gh_similarity_detector/core/comparison/: __init__.py  batch_detector.py  multi_repo.py  result_comparator.py
gh_similarity_detector/core/fingerprint/: __init__.py  generator.py  language_plugins.py  simd_batch.py  vectorized_hash.py  winnowing.py
gh_similarity_detector/core/module/: __init__.py  extractor.py
gh_similarity_detector/core/orchestration/: __init__.py  checkpoint.py  pipeline.py
gh_similarity_detector/core/plagiarism/: __init__.py  detector.py
gh_similarity_detector/core/project/: __init__.py  fetcher.py  file_filter.py
gh_similarity_detector/core/report/: __init__.py  generator.py
gh_similarity_detector/core/report/templates/: report.html.j2
gh_similarity_detector/core/rules/: __init__.py  engine.py
gh_similarity_detector/core/similarity/: __init__.py  adaptive_fusion.py  ast_comparator.py  ast_vectorizer.py  behavior_features.py  calculator.py  cross_language.py  cross_language_pipeline.py  cross_language_retrieval.py  differ.py  embedding.py  lsh_index.py  minhash_tuner.py  multiview_fusion.py  polars_df.py  sbp_filter.py  semantic_diff.py
gh_similarity_detector/infrastructure/: __init__.py
gh_similarity_detector/infrastructure/cache/: __init__.py  fingerprint_cache.py
gh_similarity_detector/infrastructure/engines/: __init__.py  jscpd_adapter.py  ncd.py
gh_similarity_detector/infrastructure/git_client/: __init__.py  client.py
gh_similarity_detector/infrastructure/github_client/: __init__.py  client.py
gh_similarity_detector/infrastructure/i18n/: __init__.py  _i18n.py
gh_similarity_detector/infrastructure/io/: __init__.py  stream_reader.py
gh_similarity_detector/infrastructure/lifecycle/: __init__.py  graceful_shutdown.py  task_queue.py
gh_similarity_detector/infrastructure/observability/: __init__.py  alerting.py  memory_profiler.py  metrics.py  progress_stream.py  runtime_profiler.py  slo_framework.py  sse_progress.py  tracing.py
gh_similarity_detector/infrastructure/parser/: __init__.py  parser_manager.py
gh_similarity_detector/infrastructure/plugins/: __init__.py
gh_similarity_detector/infrastructure/reports/: __init__.py  network_graph.py  pdf_export.py  pyecharts_viz.py  sarif_export.py  visual_report.py
gh_similarity_detector/infrastructure/resilience/: __init__.py  adaptive_rate_limiter.py  bulkhead.py  circuit_breaker.py  fallback.py  feature_flags.py  retry_strategies.py  ssrf_protection.py  tiered_rate_limiter.py  timeout.py
gh_similarity_detector/infrastructure/security/: __init__.py  api_security.py  audit_log.py  auth.py  authorization.py  ip_filter.py
gh_similarity_detector/infrastructure/storage/: __init__.py  _connection_pool.py  fingerprint_db.py  migration_manager.py  migrations.py  queries.py  result_store.py  schema.py  transaction.py
gh_similarity_detector/models/: __init__.py  entities.py  enums.py  results.py
gh_similarity_detector/tools/: __init__.py  mkdocs_setup.py  profile_detect.py
gh_similarity_detector/utils/: __init__.py  asyncio_utils.py  audit.py  deps.py  exceptions.py  hash.py  idempotency.py  json_utils.py  logger.py  math_utils.py  resource_tracker.py  rust_backend.py  sanitizer.py  validation.py
src/_module_mirror_rust/: Cargo.toml
src/_module_mirror_rust/src/: diff.rs  embedding.rs  lib.rs  lsh.rs  minhash.rs  rolling_hash.rs  simd_batch.rs  tokenizer.rs  winnowing.rs
tests/: conftest.py  test_adaptive_fusion.py  test_alerting.py  test_analysis_integration.py  test_api_contract.py  test_api_e2e.py  test_api_endpoints.py  test_api_security.py  test_ast_comparator.py  test_ast_vectorizer.py  test_audit_log.py  test_authorization.py  test_behavior_features.py  test_bulkhead.py  test_cache.py  test_cache_and_tasks.py  test_chaos.py  test_checkpoint_and_report_data.py  test_circuit_breaker.py  test_cli_db.py  test_cli_errors.py  test_cli_main.py  test_cli_tui.py  test_comparison.py  test_config.py  test_cross_language.py  test_cross_language_pipeline.py  test_cross_language_retrieval.py  test_delta_detector.py  test_deps.py  test_di_container.py  test_differ.py  test_e2e.py  test_edge_cases.py  test_edge_cases_config.py  test_embedding.py  test_events.py  test_exceptions.py  test_extractor.py  test_fallback.py  (+75 more)
tests/benchmarks/: __init__.py  baseline.json  test_core_benchmarks.py  test_infra_benchmarks.py
tests/chaos/: __init__.py
tests/fuzz/: __init__.py  fuzz_runner.py  fuzz_winnowing.py
tests/mutation/: __init__.py  mutation_runner.py
