[package]
name = "module-mirror-rust"
version = "0.1.0"
edition = "2021"
description = "Rust core extension for ModuleMirror — high-performance winnowing, rolling hash, fingerprinting, and MinHash LSH"
license = "MIT"

[lib]
name = "_module_mirror_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.24", features = ["generate-import-lib"] }
murmur3 = "0.5"
rayon = "1.10"
gaoya = "0.2"
ahash = "0.8"
simsimd = "6"
similar = { version = "2", features = ["text", "unicode"] }
lazy_static = "1"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
